--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
                     <div class="hero-content">
                         <h1 class="h1 title hero-title">We Take Care Of Your Brand</h1>
                         <p class="hero-text">
-                            blahblahblahblah. I am going to describe what this company does. It's story.
-                            The services that we offer and stuff like that.
+                            Here at DigitalMedia, we will take your brand to the next level.  
+                            We help to grow your brand by zeroing in on your target market.
+                            We offer a range of services. Tell us what you need and we will 
+                            figure out a way to make it work!
                         </p>
                         <div class="input-wrapper">
                             <input type="email" name="email_address"
@@ -66,10 +68,10 @@
                         </div>
                     </div>
                     <figure class="hero-banner">
-                        <img src="./assets/images/hero-banner.png" width="835" height="960" alt="Hero Banner" class="w-100">
-                        <img src="./assets/images/hero-icon-1.png" width="100" height="100" alt="Youtube" class="shape shape-1">
-                        <img src="./assets/images/hero-icon-2.png" width="120" height="120" alt="Twitter" class="shape shape-2">
-                        <img src="./assets/images/hero-icon-3.png" width="150" height="150" alt="Instagram" class="shape shape-3">
+                        <img src="./assets/images/hero-banner.png" width="835" height="960" alt="Hero Banner" class="w-100" data-parallax data-parallax-speed="10">
+                        <img src="./assets/images/hero-icon-1.png" width="100" height="100" alt="Youtube" class="shape shape-1" data-parallax data-parallax-speed="15">
+                        <img src="./assets/images/hero-icon-2.png" width="120" height="120" alt="Twitter" class="shape shape-2" data-parallax data-parallax-speed="25">
+                        <img src="./assets/images/hero-icon-3.png" width="150" height="150" alt="Instagram" class="shape shape-3" data-parallax data-parallax-speed="40">
                     </figure>
                 </div>
             </section>
@@ -77,10 +79,8 @@
                 <div class="container">
                     <h2 class="h2 section-title" id="process-label">How It Works</h2>
                     <p class="section-text">
-                        company story and the thoingjkjfdbfdjkgfhjghjnfghn;fk <br>
-                        djhdfihjfhjfvjvfhjvfjhgfiuobijogr
-                        dhfhfdjdfjvcuhdfnfdbjdfbjf
-                        fjhfjfurg3hiugefhkl
+                        Digitalmedia provides a better insight, thus helping you to understand the needs
+                        of your customers better.
                     </p>
                     <div class="wrapper">
                         <figure class="process-banner">
